sort by dateCreated with humanreadable timestamp. fixes #32

--- a/www/jxcore/public/styles/main.css
+++ b/www/jxcore/public/styles/main.css
@@ -70,6 +70,7 @@ body, .noSelect {
 	padding: 0;
 	border: 0;
 	border-radius: 0; /* remove rounded corners on iOS */
+	resize: none; /* hide resize box in firefox */
 	font-family: monospace;
 }
 
@@ -153,6 +154,14 @@ body, .noSelect {
 	padding: 0 10px;
 	word-wrap: break-word; /* prevent horizontal scroll here - break long single line strings */
 	white-space: pre-wrap; /* make pre text wrap */
+}
+
+/* row date */
+.postcard span {
+	display: block;
+	float: right;
+	font-size: 12px;
+	color: #ccbbaa;
 }
 
 /* edit text style */
